Bug 167875 - Writer crashes if you right click in latest table in the big document
Summary: Writer crashes if you right click in latest table in the big document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.0.3
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks: Writer-Tables Crash
  Show dependency treegraph
 
Reported: 2025-08-09 12:08 UTC by Roman Kuznetsov
Modified: 2025-08-12 19:49 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Document for the crash repro (4.98 MB, application/vnd.oasis.opendocument.text)
2025-08-09 12:08 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2025-08-09 12:08:17 UTC
Description:
Writer crashes if you right click in latest table in the big document

Steps to Reproduce:
1. Open document from attach
2. Scroll it to the last page
3. try right click on last table in the document

Actual Results:
Writer crashes

Expected Results:
Writer works normally


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 53a9cee01759ce54c4ee50468958531a360640f9
CPU threads: 16; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL threaded
Comment 1 Roman Kuznetsov 2025-08-09 12:08:45 UTC
Created attachment 202254 [details]
Document for the crash repro
Comment 2 Mike Kaganski 2025-08-09 13:46:11 UTC
After commit 1b03f6ea0362a38c6c4e5e767fcb5cf87ddd28dd.
Comment 3 Roman Kuznetsov 2025-08-09 14:12:03 UTC
Ujjawal Kumar, please take a look, thanks
Comment 4 Xisco Faulí 2025-08-09 20:50:03 UTC
I pushed a blind fix for it in 22a4e2df6f521a5baf1abfd9d4bf6da116933ed8 based on a crashreport but it's still crashing in

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e485e76d5e51e86e8e2d14067f0433e9b0d9dda9
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-GB (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 5 Xisco Faulí 2025-08-09 21:01:32 UTC
https://gerrit.libreoffice.org/c/core/+/189278 should fix it
Comment 6 Commit Notification 2025-08-10 07:56:55 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/48ff1bbbe90001716e7421c5ebd30e2e635fe99e

tdf#167875: check GetLower()

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-08-10 13:27:49 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/8cc5eaffce520ce93e81e108c2c28dc301d06c8d

tdf#167875: check GetLower()

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-08-12 11:19:15 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-0":

https://git.libreoffice.org/core/commit/c114d60af096c625057cb0ed317d114917d4478b

tdf#167875: check GetLower()

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.