tdf#167875: check GetLower()

After
commit 1b03f6ea0362a38c6c4e5e767fcb5cf87ddd28dd
Author: Ujjawal Kumar <randomforest33@gmail.com>
Date:   Thu Mar 13 20:42:21 2025 +0530

    tdf#149825 Add command to insert a paragraph break before table

Previously, I pushed a blind fix for it in
commit 22a4e2df6f521a5baf1abfd9d4bf6da116933ed8
Author: Xisco Fauli <xiscofauli@libreoffice.org>
Date:   Thu Aug 7 19:59:47 2025 +0200

    crashreporting: check Lower()

Change-Id: Ied2e14224adcf71c0c438df13506e684136b7f6c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189278
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 48ff1bbbe90001716e7421c5ebd30e2e635fe99e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189287
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>